[project]
name = "leetlog"
version = "0.1.0"
description = "simple cli for tracking leetcode plan progress"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.2",
    "requests>=2.32.5",
]

[project.scripts]
leetlog = "src.cli:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src"]
